force-app/main/default/objects/Product_Configuration__mdt/Product_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Used to store the configuration of common products across different parent offer bundles</description>
    <label>Product Configuration</label>
    <pluralLabel>Products Configuration</pluralLabel>
</CustomObject>