force-app/main/default/objects/Product_Configuration__mdt/fields/BundleIdentifier__c.field-meta.xml
<CustomField>
    <fullName>BundleIdentifier__c</fullName>
    <description>Stores the reference to the parent offer component</description>
    <label>Bundle Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>