force-app/main/default/objects/Product_Configuration__mdt/fields/ComponentIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ComponentIdentifier__c</fullName>
    <description>Stores the reference to the child component</description>
    <label>Component Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>