force-app/main/default/objects/Product_Configuration__mdt/fields/ConfigurationData__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationData__c</fullName>
    <description>Store the actual configuration</description>
    <label>Configuration Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>