force-app/main/default/objects/Product_Configuration__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A boolean field to mark if the configuration is active or inactive</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>