force-app/main/default/objects/Product_Configuration__mdt/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <description>Stores line number to match with the component in the product structure</description>
    <label>LineNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>