force-app/main/default/objects/Product_Configuration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BundleIdentifier__c</columns>
    <columns>ComponentIdentifier__c</columns>
    <columns>IsActive__c</columns>
    <columns>ConfigurationData__c</columns>
    <columns>LineNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>